--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,15 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: urbanmedic
+    restart: unless-stopped
 
   web:
     build: .
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8080"
+    command: sh -c "sleep 10 && python manage.py migrate && python manage.py runserver 0.0.0.0:8080"
     volumes:
       - ./app:/code
     ports:
       - '8080:8080'
     depends_on:
       - db
+    restart: unless-stopped
